--- a/index.html
+++ b/index.html
@@ -65,8 +65,8 @@
 </html>
 
 <script>
-    let lat = document.getElementById("ido");
-    let lng = document.getElementById("keido");
+    let ido = document.getElementById("ido");
+    let keido = document.getElementById("keido");
     let map = document.getElementById("map");
     navigator.geolocation.getCurrentPosition((position) => {
         let coords = position.coords;
