--- a/index.html
+++ b/index.html
@@ -41,13 +41,13 @@
             <div class="level-item has-text-centered">
                 <div>
                     <p class="heading">緯度</p>
-                    <p class="title" id="lat">取得中....</p>
+                    <p class="title" id="ido">取得中....</p>
                 </div>
             </div>
             <div class="level-item has-text-centered">
                 <div>
                     <p class="heading">経度</p>
-                    <p class="title" id="lng">取得中...</p>
+                    <p class="title" id="keido">取得中...</p>
                 </div>
             </div>
         </nav>
