--- a/index.html
+++ b/index.html
@@ -7,14 +7,11 @@
 
     <title>まちあわ!!| 自分の居場所をリンクで共有できるサイト。</title>
     <meta name="description" content="ディスクリプション" />
-
     <meta property="og:type" content="website" />
-    <meta property="og:title" content="タイトル" />
-    <meta property="og:image" content="/img/icon.png" />
-    <meta property="og:url" content="http://example.net/" />
-    <meta property="og:site_name" content="サイト名" />
-    <meta property="og:description" content="ディスクリプション" />
-
+    <meta property="og:title" content="Ehor｜Github" />
+    <meta property="og:site_name" content="まちあわ!!" />
+    <meta property="og:description" content="自分の居場所をリンクで共有できるサイト。Javascriptのみで実行されているため、
+    こちら側からは情報を見ることはできません。必要なときだけ、友達に送れば住所がばれることがありません。" />
     <meta name="robots" content="noarchive">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css">
 </head>
@@ -75,7 +72,7 @@
         map.setAttribute("href", "https://www.google.co.jp/maps/@" + coords.latitude + "," + coords.longitude + ",19z");
         var url = location.protocol + "//" + location.host + "/main.html" + "?ido=" + coords.latitude + "&keido=" + coords.longitude;
         document.getElementById("link").value = url;
-        document.getElementsById("display").style.display = "block";
+        document.getElementById("display").style.display = "block";
 
     });
     function copy() {
