--- a/main.html
+++ b/main.html
@@ -6,15 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <title>まちあわ!!| 自分の居場所をリンクで共有できるサイト。</title>
-    <meta name="description" content="ディスクリプション" />
+    <meta name="description" content="自分の居場所をリンクで共有できるサイト。Javascriptのみで実行されているため、
+    こちら側からは情報を見ることはできません。必要なときだけ、友達に送れば住所がばれることがありません。" />
 
     <meta property="og:type" content="website" />
-    <meta property="og:title" content="タイトル" />
-    <meta property="og:image" content="/img/icon.png" />
-    <meta property="og:url" content="http://example.net/" />
-    <meta property="og:site_name" content="サイト名" />
-    <meta property="og:description" content="ディスクリプション" />
-    <meta name="robots" content="noarchive">
+    <meta property="og:title" content="Ehor｜Github" />
+    <meta property="og:site_name" content="相手の場所を見る｜まちあわ!!" />
+    <meta property="og:description" content="自分の居場所をリンクで共有できるサイト。Javascriptのみで実行されているため、
+    こちら側からは情報を見ることはできません。必要なときだけ、友達に送れば住所がばれることがありません。" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css">
 </head>
 
@@ -65,7 +64,7 @@
 </html>
 
 <script>
-    
+
     function getParam(name, url) {
         if (!url) url = window.location.href;
         name = name.replace(/[\[\]]/g, "\\$&");
