--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
             </div>
         </nav>
     </div>
+    <h1 class="title is-4"> このリンクを友達に送ると、相手に位置を知らせることができるよ!!</h1>
     <div class="box">
         <input class="input is-primary" id="link" type="text" placeholder="位置情報を取得すると、ここに共有リンクが表示されます。">
         <div id="display">
