--- a/index.html
+++ b/index.html
@@ -105,7 +105,8 @@
         ido.textContent = coords.latitude;
         keido.textContent = coords.longitude;
         map.setAttribute("href", "https://www.google.co.jp/maps/@" + coords.latitude + "," + coords.longitude + ",19z");
-        var url = location.protocol + "//" + location.host + "/main.html" + "?ido=" + coords.latitude + "&keido=" + coords.longitude;
+        var url = location.protocol + "//" + location.host + "/Matiawa
+/main.html" + "?ido=" + coords.latitude + "&keido=" + coords.longitude;
         document.getElementById("link").value = url;
         document.getElementById("display").style.display = "block";
 
