--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                     <p class="heading">緯度</p>
                     <p class="title" id="ido">取得中....</p>
                 </div>
-            </div>
+            </div><br>
             <div class="level-item has-text-centered">
                 <div>
                     <p class="heading">経度</p>
