--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
     <title>まちあわ!!| 自分の居場所をリンクで共有できるサイト。</title>
     <meta name="description" content="自分の居場所をリンクで共有できるサイト。Javascriptのみで実行されているため、
     こちら側からは情報を見ることはできません。必要なときだけ、友達に送れば住所がばれることがありません。" />
-
+    <meta name="og:image"
+    content="https://ehor-developer.github.io/Matiawa/img/%E3%81%BE%E3%81%A1%E3%81%82%E3%82%8F.png">
     <meta property="og:type" content="website" />
     <meta property="og:title" content="Ehor｜Github" />
     <meta property="og:site_name" content="まちあわ!!" />
