--- a/main.html
+++ b/main.html
@@ -8,10 +8,11 @@
     <title>まちあわ!!| 自分の居場所をリンクで共有できるサイト。</title>
     <meta name="description" content="自分の居場所をリンクで共有できるサイト。Javascriptのみで実行されているため、
     こちら側からは情報を見ることはできません。必要なときだけ、友達に送れば住所がばれることがありません。" />
-
+    <meta name="og:image"
+        content="https://ehor-developer.github.io/Matiawa/img/%E7%9B%B8%E6%89%8B%E3%81%AE%E5%A0%B4%E6%89%80.png">
     <meta property="og:type" content="website" />
-    <meta property="og:title" content="Ehor｜Github" />
-    <meta property="og:site_name" content="相手の場所を見る｜まちあわ!!" />
+    <meta property="og:title" content="【まちあわ!!】相手の情報を見るにはここをクリックしてください。" />
+    <meta property="og:site_name" content="Ehor｜Github" />
     <meta property="og:description" content="自分の居場所をリンクで共有できるサイト。Javascriptのみで実行されているため、
     こちら側からは情報を見ることはできません。必要なときだけ、友達に送れば住所がばれることがありません。" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css">
@@ -74,8 +75,8 @@
         if (!results[2]) return '';
         return decodeURIComponent(results[2].replace(/\+/g, " "));
     }
-    document.getElementById("lat").innerHTML = Math.round(getParam('ido')　* 1000) / 1000;
-    document.getElementById("lng").innerHTML = Math.round(getParam('keido')　* 1000) / 1000;
+    document.getElementById("lat").innerHTML = Math.round(getParam('ido') * 1000) / 1000;
+    document.getElementById("lng").innerHTML = Math.round(getParam('keido') * 1000) / 1000;
     let map = document.getElementById("map");
     map.setAttribute("href", "https://www.google.co.jp/maps/@" + getParam('ido') + "," + getParam('keido') + ",19z");
 </script>
