--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <title>まちあわ!!| 自分の居場所をリンクで共有できるサイト。</title>
     <meta name="description" content="自分の居場所をリンクで共有できるサイト。Javascriptのみで実行されているため、
     こちら側からは情報を見ることはできません。必要なときだけ、友達に送れば住所がばれることがありません。" />
+    <meta name=”twitter:card” content=”summary_large_image” />
     <meta name="og:image"
     content="https://ehor-developer.github.io/Matiawa/img/%E3%81%BE%E3%81%A1%E3%81%82%E3%82%8F.png">
     <meta property="og:type" content="website" />
@@ -16,6 +17,7 @@
     <meta property="og:description" content="自分の居場所をリンクで共有できるサイト。Javascriptのみで実行されているため、
     こちら側からは情報を見ることはできません。必要なときだけ、友達に送れば住所がばれることがありません。" />
     <meta name="robots" content="noarchive">
+    <meta name=”twitter:image” content=”https://ehor-developer.github.io/Matiawa/img/%E3%81%BE%E3%81%A1%E3%81%82%E3%82%8F.png” />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css">
 </head>
 
