--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
     こちら側からは情報を見ることはできません。必要なときだけ、友達に送れば住所がばれることがありません。" />
     <meta name="robots" content="noarchive">
     <meta name=”twitter:image” content=”https://ehor-developer.github.io/Matiawa/img/%E3%81%BE%E3%81%A1%E3%81%82%E3%82%8F.png” />
+    <meta property="og:image:width" content="1200">
+    <meta property="og:image:height" content="600">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css">
 </head>
 
