--- a/main.html
+++ b/main.html
@@ -9,8 +9,11 @@
     <meta name=”twitter:card” content=”summary_large_image” />
     <meta name="description" content="自分の居場所をリンクで共有できるサイト。Javascriptのみで実行されているため、
     こちら側からは情報を見ることはできません。必要なときだけ、友達に送れば住所がばれることがありません。" />
+    <meta name="twitter:card" content="summary_large_image">
     <meta name="og:image"
         content="https://ehor-developer.github.io/Matiawa/img/%E7%9B%B8%E6%89%8B%E3%81%AE%E5%A0%B4%E6%89%80.png">
+    <meta property="og:image:width" content="1200">
+    <meta property="og:image:height" content="600">
     <meta property="og:type" content="website" />
     <meta property="og:title" content="【まちあわ!!】相手の情報を見るにはここをクリックしてください。" />
     <meta property="og:site_name" content="Ehor｜Github" />
