--- a/main.html
+++ b/main.html
@@ -10,8 +10,7 @@
     <meta name="description" content="自分の居場所をリンクで共有できるサイト。Javascriptのみで実行されているため、
     こちら側からは情報を見ることはできません。必要なときだけ、友達に送れば住所がばれることがありません。" />
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="og:image"
-        content="https://ehor-developer.github.io/Matiawa/img/%E7%9B%B8%E6%89%8B%E3%81%AE%E5%A0%B4%E6%89%80.png">
+    <meta property="og:image" content="サムネイル画像のURL">
     <meta property="og:image:width" content="1200">
     <meta property="og:image:height" content="600">
     <meta property="og:type" content="website" />
@@ -20,7 +19,7 @@
     <meta property="og:description" content="自分の居場所をリンクで共有できるサイト。Javascriptのみで実行されているため、
     こちら側からは情報を見ることはできません。必要なときだけ、友達に送れば住所がばれることがありません。" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css">
-    <meta name=”twitter:image” content=”https://ehor-developer.github.io/Matiawa/img/%E3%81%BE%E3%81%A1%E3%81%82%E3%82%8F.png” />
+    <meta name=”twitter:image” content=”https://ehor-developer.github.io/Matiawa/img/basyo.png />
 </head>
 
 <body>
