--- a/main.html
+++ b/main.html
@@ -10,7 +10,7 @@
     <meta name="description" content="自分の居場所をリンクで共有できるサイト。Javascriptのみで実行されているため、
     こちら側からは情報を見ることはできません。必要なときだけ、友達に送れば住所がばれることがありません。" />
     <meta name="twitter:card" content="summary_large_image">
-    <meta property="og:image" content="サムネイル画像のURL">
+    <meta property="og:image" content="https://ehor-developer.github.io/Matiawa/img/basyo.png">
     <meta property="og:image:width" content="1200">
     <meta property="og:image:height" content="600">
     <meta property="og:type" content="website" />
