--- a/main.html
+++ b/main.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <title>まちあわ!!| 自分の居場所をリンクで共有できるサイト。</title>
-    <meta name=”twitter:card” content=”summary_large_image” />
+    <meta name="twitter:card" content="summary_large_image"/>
     <meta name="description" content="自分の居場所をリンクで共有できるサイト。Javascriptのみで実行されているため、
     こちら側からは情報を見ることはできません。必要なときだけ、友達に送れば住所がばれることがありません。" />
     <meta name="twitter:card" content="summary_large_image">
@@ -19,7 +19,7 @@
     <meta property="og:description" content="自分の居場所をリンクで共有できるサイト。Javascriptのみで実行されているため、
     こちら側からは情報を見ることはできません。必要なときだけ、友達に送れば住所がばれることがありません。" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css">
-    <meta name=”twitter:image” content=”https://ehor-developer.github.io/Matiawa/img/basyo.png />
+    <meta name=”twitter:image" content="https://ehor-developer.github.io/Matiawa/img/basyo.png/">
 </head>
 
 <body>
