--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
         <div id="display">
             <button class="button is-primary onclick" onclick="copy()">リンクをコピー</button>
             <a id="map" href="" target="_blank"><button class="button is-primary"
-                    style="width: 20em; height: 4em">GoogleMapで見る</button></a>
+                   >GoogleMapで見る</button></a>
 
         </div>
     </div>
