--- a/main.html
+++ b/main.html
@@ -43,7 +43,7 @@
         display: flex !important;
         justify-content: center;
         align-items: center;
-        width: 7vh;
+        width: 7vh!impotant;
         top: 0;
         right: 0;
         left: 0;
