--- a/main.html
+++ b/main.html
@@ -40,37 +40,25 @@
 <div class="footers"></div>
 <style>
     .pin {
-        display: flex !important;
         justify-content: center;
         align-items: center;
-        width: 7vh;
-        top: 0;
-        right: 0;
-        left: 0;
-        bottom: 0;
         animation-timing-function: ease-in-out;
         animation-iteration-count: infinite;
         animation-direction: alternate;
-        animation-duration: 1.5s;
-        animation-name: anm;
     }
 
     @keyframes anm {
         0% {
-            transform: translate(0, 0px);
-            transform: scale(1.1, 1);
+            transform: scale(1);
+            -webkit-transform: scale(1);
         }
 
         50% {
-            transform: translate(1px, 0px);
-            transform: scale(1, 1);
-        }
-
-        100% {
-            transform: translate(0, 3px);
-            transform: scale(1, 1.1);
+            transform: scale(1.1);
+            -webkit-transform: scale(1.1);
         }
     }
+
 
     #button {
         width: 7vh;
